# degrees

./: Cargo.toml  README.md
.github/workflows/: main.yml
data/: conversions.json
src/: lib.rs  temp.rs
src/ops/: add.rs  cmp.rs  div.rs  mod.rs  mul.rs  sub.rs
tests/: serde.rs
