[package]
name = "degrees"
description = "Easily work with and compare temeratures in different units"
version = "0.4.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", optional = true }

[features]
serde = ["dep:serde", "serde/derive"]

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
degrees = { path = ".", features = ["serde"] }
