[package]
name = "degrees"
description = "Easily work with and compare temeratures in different units"
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/deebloo/degrees"
homepage = "https://github.com/deebloo/degrees"
documentation = "https://github.com/deebloo/degrees"

[dependencies]
serde = { version = "1.0.188", optional = true }

[features]
serde = ["dep:serde", "serde/derive"]

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.115" }
degrees = { path = ".", features = ["serde"] }
